--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright
 -->
 <head>
-	<title>An ExampleWebsite </title>
+	<title>A very respectfull website </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,10 +18,12 @@ Copyright
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			Just some content
+			Just some content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Lior cohen Company 2014</p>
 	</footer>
 </body>
 </html>
